--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.2.0"
   },
   "devDependencies": {
