--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "gsap": "^3.12.5",
+    "jspdf": "^2.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
+    "react-toastify": "^11.0.2",
     "socket.io-client": "^4.8.1",
     "swiper": "^11.2.0"
   },
