--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "axios": "^1.7.9",
     "emoji-picker-react": "^4.12.0",
     "gsap": "^3.12.5",
     "jspdf": "^2.5.2",
